misc [platform]: CCE in `CheckRequiredPluginsActivity`; formatting
GitOrigin-RevId: 0063cb86edb4001d6f975f51d3921a7e71cd2ec9